--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ body {
   }
 
   .menu-item {
-    @apply flex flex-col items-center justify-center p-2 text-center rounded-xl md:flex-row md:justify-start md:items-center hover:bg-gray-main;
+    @apply flex flex-col items-center justify-center p-2 text-sm text-center rounded-xl md:flex-row md:justify-start md:items-center hover:bg-gray-main;
   }
 
   /* for mini menubar in >= md screen */
@@ -53,4 +53,5 @@ body {
     @apply bg-white block absolute left-0 right-0 border-gray-dark shadow-[inset_1px_2px_8px_rgb(0,0,0,.3)];
   }
   
+
 }
