--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,11 @@ body {
 
 @layer components {
   .primary-btn {
-    @apply text-blue-main border-[1px] border-gray-main rounded-full px-3 py-1 hover:bg-blue-light hover:border-blue-light;
+    @apply text-blue-main border-[1px] border-gray-main rounded-full px-3 py-1 cursor-pointer hover:bg-blue-light hover:border-blue-light;
+  }
+
+  .secondary-btn {
+    @apply bg-black text-gray-light border-[1px] rounded-full px-3 py-1 cursor-pointer hover:opacity-80;
   }
 
   .menu-item-container {
